update on pc trial 1

--- a/HomePage.html
+++ b/HomePage.html
@@ -5,5 +5,6 @@
     <h1>This is SCC practical class</h1>
 
     <p>Welcome to SCC class</p>
+    <p>if you want to see how to use git, check software config & construction folder.</p>
   </body>
 </html>
