--- a/HomePage.html
+++ b/HomePage.html
@@ -2,7 +2,7 @@
   <body>
 
 
-    <h1>This is not SCC practical class</h1>
+    <h1>This is a SCC practical class</h1>
 
     <p>Welcome to SCC class</p>
     <p>if you want to see how to use git, check software config & construction folder.</p>
